--- a/demos/index.html
+++ b/demos/index.html
@@ -9,26 +9,247 @@
 		}
 	</style>
 	<script src="../build/plugins.min.js"></script>
-	<script src="../build/jquery.grid-composer.min.js"></script>
-	<!--<script src="../src/jquery.grid-composer.js"></script>-->
+	<!--<script src="../build/jquery.grid-composer.min.js"></script>-->
+	<script src="../src/jquery.grid-composer.js"></script>
 	<script>
 		$(document).ready(function() {
 			$('#mainGrid').gridComposer({
 				dimension: 20,
 				columns: 48,
-				lines: 20
+				lines: 20,
+				components: [
+					{
+						name: 'Task',
+						elements: [
+							{
+								image: 'img/task.png'
+							}
+						],
+						columns: 5,
+						lines: 3,
+						onDrop: function(event, item) {
+							var name = prompt('Name of the task');
+
+							if( name ) {
+								$(item).append('<span>' + name + '</span>');
+							}
+						}
+					},
+					{
+						name: 'Task Service',
+						elements: [
+							{
+								image: 'img/task_service.png'
+							}
+						],
+						columns: 5,
+						lines: 3,
+						onDrop: function(event, item) {
+							var name = prompt('Name of the task');
+
+							if( name ) {
+								$(item).append('<span>' + name + '</span>');
+							}
+						}
+					},
+					{
+						name: 'Start',
+						elements: [
+							{
+								image: 'img/start.png'
+							}
+						],
+						columns: 3,
+						lines: 3
+					},
+					{
+						name: 'If',
+						elements: [
+							{
+								image: 'img/if.png'
+							}
+						],
+						columns: 3,
+						lines: 3
+					},
+					{
+						name: 'Arrow Right',
+						elements: [
+							{
+								image: 'img/arrow_right.png',
+								css: {
+									right: 0
+								}
+							}
+						],
+						resize: ['e'],
+						columns: 4,
+						lines: 1
+					},
+					{
+						name: 'Arrow Right Down',
+						elements: [
+							{
+								image: 'img/arrow_down.png',
+								css: {
+									bottom: 0,
+									right: 0
+								}
+							},
+							{
+								image: 'img/bar_left_down.png',
+								css: {
+									right: 0
+								}
+							}
+						],
+						resize: ['s', 'e', 'se'],
+						columns: 4,
+						lines: 3
+					},
+					{
+						name: 'Arrow Left Down',
+						elements: [
+							{
+								image: 'img/arrow_down.png',
+								css: {
+									bottom: 0
+								}
+							},
+							{
+								image: 'img/bar_right_down.png'
+							}
+						],
+						resize: ['s', 'w', 'sw'],
+						columns: 4,
+						lines: 3
+					},
+					{
+						name: 'Arrow Left',
+						elements: [
+							{
+								image: 'img/arrow_left.png'
+							}
+						],
+						resize: ['w'],
+						columns: 4,
+						lines: 1
+					},
+					{
+						name: 'Arrow Down',
+						elements: [
+							{
+								image: 'img/arrow_down.png',
+								css: {
+									bottom: 0
+								}
+							}
+						],
+						resize: ['s'],
+						columns: 1,
+						lines: 3
+					},
+					{
+						name: 'Arrow Up',
+						elements: [
+							{
+								image: 'img/arrow_up.png'
+							}
+						],
+						resize: ['n'],
+						columns: 1,
+						lines: 3
+					},
+					{
+						name: 'Arrow Right Up',
+						elements: [
+							{
+								image: 'img/arrow_up.png',
+								css: {
+									right: 0
+								}
+							},
+							{
+								image: 'img/bar_left_up.png',
+								css: {
+									bottom: 0,
+									right: 0
+								}
+							}
+						],
+						resize: ['n', 'e', 'ne'],
+						columns: 4,
+						lines: 3
+					},
+					{
+						name: 'Arrow Left Up',
+						elements: [
+							{
+								image: 'img/arrow_up.png'
+							},
+							{
+								image: 'img/bar_right_up.png',
+								css: {
+									bottom: 0
+								}
+							}
+						],
+						resize: ['n', 'w', 'nw'],
+						columns: 4,
+						lines: 3
+					},
+					{
+						name: 'End',
+						elements: [
+							{
+								image: 'img/end.png'
+							}
+						],
+						columns: 3,
+						lines: 3
+					}
+				]
+			});
+
+			// $('#mainGrid').gridComposer('addComponent', {
+			// 	name: 'Start',
+			// 	image: 'img/component3.png'
+			// });
+
+
+			$('#translateGrid').click(function() {
+				var items = [];
+
+				$('#mainGrid .gc-grid .gc-grid-item').each(function(index) {
+					items.push({
+						id: index+1,
+						x: $(this).position().left,
+						y: $(this).position().top,
+						w: $(this).width(),
+						h: $(this).height(),
+						image: $(this).find('img').attr('src'),
+						parentID: 0
+					});
+				});
+
+				$.each(items, function(index, item) {
+					$.each(items, function(indexChild, itemChild) {
+						if(
+							((item.x + item.w) == itemChild.x)
+							&& (item.y <= itemChild.y && (item.y + item.h) > itemChild.y)
+						) {
+							items[indexChild].parentID = item.id;
+						}
+					});
+				});
+
+				console.log(items);
 			});
 		});
 	</script>
 </head>
 <body>
-	<div id="mainGrid">
-		<div class="gc-components">
-			<div class="gc-component-item gc-resize-horz" style="background:red;width:100px;height:100px;"></div>
-			<div class="gc-component-item gc-resize" style="background:blue;width:100px;height:100px;"></div>
-			<div class="gc-component-item gc-resize-vert" style="background:green;width:100px;height:100px;"></div>
-			<div class="gc-component-item" style="background:yellow;width:100px;height:100px;"></div>
-		</div>
-	</div>
+	<div id="mainGrid"></div>
+	<button id="translateGrid" type="button">Translate to JSON</button>
 </body>
 </html>
