bugfix component id getting undefined

--- a/demos/index.html
+++ b/demos/index.html
@@ -9,7 +9,8 @@
 		}
 	</style>
 	<script src="../build/plugins.min.js"></script>
-	<script src="../build/jquery.grid-composer.min.js"></script>
+	<!--<script src="../build/jquery.grid-composer.min.js"></script>-->
+	<script src="../src/jquery.grid-composer.js"></script>
 	<script>
 		$(document).ready(function() {
 			$('#mainGrid').gridComposer({
