updating demo for github pages

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
 <head>
 	<meta charset="utf8">
-	<link rel="stylesheet" href="../build/plugins.min.css">
-	<link rel="stylesheet" href="../build/jquery.grid-composer.min.css">
+	<link rel="stylesheet" href="build/plugins.min.css">
+	<link rel="stylesheet" href="build/jquery.grid-composer.min.css">
 	<style>
 		body {
 			margin: 0;
 		}
 	</style>
-	<script src="../build/plugins.min.js"></script>
-	<!--<script src="../build/jquery.grid-composer.min.js"></script>-->
-	<script src="../src/jquery.grid-composer.js"></script>
+	<script src="build/plugins.min.js"></script>
+	<script src="src/jquery.grid-composer.js"></script>
+	<!--<script src="build/jquery.grid-composer.min.js"></script>-->
 	<script>
 		$(document).ready(function() {
 			$('#mainGrid').gridComposer({
